# streaming-data-analysis

./: .gitignore  Dockerfile  Dockerfile.flink  README.md  docker-compose.yml  pyproject.toml
src/common/: __init__.py  ecommerce_avro.py
src/lab1/: config.py  config.yaml  consumer.py  producer.py  schema.py
src/lab2/: __init__.py  config.py  config.yaml  flink_job.py  producer.py  verify_parquet.py
src/lab3/: __init__.py  __main__.py  config.py  config.yaml  flink_job.py  models.py  producer.py
tests/lab1/: test_producer.py  test_schema.py
tests/lab2/: __init__.py  test_config.py  test_producer.py  test_verify_parquet.py
tests/lab3/: test_config.py  test_producer.py
